--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,8 @@ body{
     background-color: #430215;
     
 }
+
+
 /* .menu-estilos {
    color: #FFFFFF;
    padding: .5em 1em;
@@ -73,6 +75,41 @@ body{
     color: #FFFFFF;
     background-color: #430215;
 }
+
+/* ORGANIZACION */
+.wd-men-pag a {
+	color: #323032;
+}
+
+.wd-men-pag a:hover {
+	color:#000;
+	}
+.wd-men-pag h2{
+    color: #64001d;
+    margin-left: 15px;
+    font-size: 1.2rem;
+    font-family: 'Open Sans';
+    }
+.wd-men-pag li {
+    padding: 10px 15px;
+    text-transform: uppercase;
+    border-bottom: rgba(0, 0, 0, .2) solid 1px;
+}
+
+        .fnt-10 {
+    font-family: 'Open Sans';
+    font-size: 12px;
+        }
+
+        .grisb01 {
+            background: rgba(188, 184, 173, .3);
+        }
+   
+.menu-nosotros{
+    margin-top: 2em;
+}
+
+
 
 /* BARRA GEST DOCENTE */
 
@@ -118,6 +155,7 @@ body{
   .gris01 {
     background:#DBDBDB;
     border-bottom: #6d6d72 solid 1px; 
+    z-index: 1050;
 	
   }
 
@@ -158,7 +196,14 @@ body{
     margin-bottom: .5em;
     display: inline-block;
     font-size: 1rem;
+    font-family: 'Open Sans', sans-serif;
   }
+
+.card h5 {
+    font-weight:bold;
+    color: rgb(100, 0, 29);
+
+}
  
 
 /*  CONTENIDO PROCEDIMIENTOS */
@@ -295,7 +340,7 @@ margin: auto;
 
 .banner{
     filter:brightness(0.7);
-    margin-bottom: 4em;
+    margin-bottom: 3em;
 }
 
 .zoom{
@@ -306,7 +351,7 @@ margin: auto;
 }
 
 .zoom:hover{
-    transform:scale(1.2);
+    transform:scale(1.1);
     /* transform : scale(2);
      */
 }
