--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,7 @@ margin: auto;
 }
 
 
+
 .noticias {
     text-align: justify
 } 
@@ -404,14 +405,12 @@ margin: auto;
     font-family: 'Open Sans', sans-serif;
 }
 
-.contacto{
-    font-size: 1rem;
-    padding: 1em;
 
-}
 
 .footer h3{
     font-size: 1.2rem ;
+    padding: 0px;
+    margin-bottom: 1rem;
 }
 
 .fnt-peq {
@@ -435,7 +434,7 @@ margin: auto;
     background-color: rgba(50,48,50,1);
     color: #FFFFFF;
     font-family: Helvetica, Arial;
-    font-size: 1rem;
+    font-size: .8rem;
 }
 
 @media (max-width: 767px) {
