--- a/css/styles.css
+++ b/css/styles.css
@@ -24,11 +24,37 @@ body{
     height: auto;
 }
 
-.caja {
+/* CAJA */
+.caja{
     
-    background-color: rgba(50,48,50,.9);
+    background-color: #6d6d72;
     width: 100%;
-    height: 15px; 
+    height: 56px; 
+    padding-left:18%;
+}
+
+.menu-sec a {
+    color: #ffffff;
+    text-decoration:none;
+}
+
+.menu-sec{
+    float: left;
+    padding: 5px 10px;
+    list-style:none;
+    width: 200px;
+    height: 56px;
+    font-size: .9em ;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.menu-sec:hover {
+    background-color: #55555a;
+}
+
+.act-academicas{
+    background: #9B0D43;
 }
 
 .navbar {
